# notifykit

./: pyproject.toml
src/notifykit/: __init__.py  base.py  dispatcher.py  models.py
src/notifykit/channels/: __init__.py  console.py  telegram.py  webhook.py
