[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notifykit"
version = "0.1.0"
description = "Reusable notification dispatching library (console/webhook/etc.)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = [
  "requests>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

